Fixed the translate command(it was not sending the requests correctly) by specifying the user agent.
Credits to I Al Istannen on the Together Java Discord